Use more responsive units for the hero images grid to avoid the horizontal scroll bar

--- a/main.css
+++ b/main.css
@@ -120,16 +120,16 @@ header .btns {
 
 .hero-images {
   display: grid;
-  grid-template-columns: 151px 151px;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: 143px 143px;
   gap: 24px;
-  width: 327px;
+  width: 80%;
   margin: 64px auto;
 }
 
 .hero-image {
-  width: 151px;
-  height: 143px;
+  width: 100%;
+  height: 100%;
   border-radius: 10px;
 }
 
@@ -275,7 +275,7 @@ footer .btn span {
 
   .hero-images {
     display: flex;
-    width: 689px;
+    max-width: 689px;
   }
 
   .hero-image {
@@ -322,7 +322,7 @@ footer .btn span {
   }
 
   .hero-images {
-    width: 1110px;
+    max-width: 1110px;
   }
 
   .hero-image {
@@ -355,5 +355,9 @@ footer .btn span {
   footer p {
     max-width: 350px;
     text-align: start;
+  }
+
+  footer .btn {
+    margin-right: 0;
   }
 }
